<resources>
    <string name="app_name">My Application</string>
    <string name="title_login_username">Username:</string>
    <string name="title_login_username_hint">Enter your username:</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login information</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit">Exit confirmation</string>
    <string name="title_confirm_exit_message">Are you sure want to exit?</string>
    <string name="title_confirm_exit_yes">Yes</string>
    <string name="title_confirm_exit_no">No</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_product_category">Product Category</string>
    <string name="title_product">Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_user_name">User Name:</string>
    <string name="title_password">Password</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_product_detail">Product Details</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_quantity">Quantity:</string>
    <string name="title_price">Price:</string>
    <string name="title_cate_id">Category ID:</string>
    <string name="title_description">"Description: "</string>
    <string name="title_image_id">Image ID:</string>
    <string name="title_new_product">New Product:</string>
    <string name="title_manage_categories">Manage Categories</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_order">Order</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_body">Body:</string>
    <string name="title_multi_threading">Multi-Threading</string>
    <string name="title_handler_send_message">HANDLER SEND MESSAGE</string>
    <string name="title_handler_post_message">HANDLER POST MESSAGE</string>
    <string name="title_asysn_task">ASYNC TASK</string>
    <string name="title_draw">DRAW</string>
    <string name="title_number_of_customer"> Number of Customers:</string>
    <string name="title_load_customer">Load Customer</string>
    <string name="title_number_of_button">Number Of Button:</string>
    <string name="title_firebase">Firebase</string>
    <string name="title_insert_contact">Insert Contact</string>
</resources>