<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvCustomer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_customer" />

                <TextView
                    android:id="@+id/txtEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_employee" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_employee" />

                <TextView
                    android:id="@+id/txtCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_customer" />

            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_product_category" />

                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product_category" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_product" />

                <TextView
                    android:id="@+id/txtProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_payment_method" />

                <TextView
                    android:id="@+id/txtPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_payment_method" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_order" />

                <TextView
                    android:id="@+id/txtOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_order" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</LinearLayout>