<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtPercent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendSMSActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_phone_number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:text="@string/title_body"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:ems="10"
        android:gravity="start|top|left"
        android:inputType="textMultiLine"
        android:text="Xin chao Ong Obama. Minh di hoc them mot chuyen nganh moi nhe?" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSendsms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms1" />

        <ImageView
            android:id="@+id/imgSendsms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms2" />
    </LinearLayout>
</LinearLayout>